# Visera

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  Visera.bat  Visera.sh
Apps/: README.md
Apps/AlohaVisera/: .gitignore  CMakeLists.txt  README.md
Apps/AlohaVisera/Source/: AppScene.ixx  Launcher.ixx
Apps/ViseraCanvas/: CMakeLists.txt
Apps/ViseraCanvas/Source/: Launcher.cpp  ViseraCanvas.ixx
Engine/: CMakeLists.txt  TODO.md
Engine/Assets/Shaders/: MyShaders.slang  Triangle.slang  URP-Background-Skybox.slang  URP-Forward-Geometry.slang  URP-Postprocess-GammaCorrection.slang  URP-Postprocessing-GammaCorrection.slang  URP-Shadow-Parallel.slang  URPBackgroundSkybox.slang  URPForwardGeometry.slang
Engine/Configs/: Configs.json  Visera.h
Engine/Global/: Configs.json  Visera  Visera-Global.ixx  Visera.h  ViseraEngine
Engine/Global/PCH/: Visera-Patterns.h  Visera-STD.h  Visera-Types.h
Engine/Interfaces/: App-Base.ixx  App-IO.ixx  App-Log.ixx  App-Math.ixx  App-Render.ixx  App.ixx
Engine/Shaders/: MyShaders.slang  Triangle.slang
Engine/Source/: Visera.ixx
Engine/Source/Core/: Core.ixx  Visera-Core.ixx
Engine/Source/Core/Base/: Base.ixx
Engine/Source/Core/Base/Coordinate/: Coordinate-Axis.ixx  Coordinate-World.ixx  Coordinate.ixx
Engine/Source/Core/Base/Exception/: Exception-Error.ixx  Exception-RuntimeError.ixx  Exception.ixx
Engine/Source/Core/Base/Time/: Time.ixx
Engine/Source/Core/Base/Type/: Type.ixx
Engine/Source/Core/Basic/: Visera-Core-Basic.ixx
Engine/Source/Core/Basic/Type/: Visera-Core-Basic-Type-Char.ixx  Visera-Core-Basic-Type-Name.ixx  Visera-Core-Basic-Type.ixx
Engine/Source/Core/Exception/: Exception-Error.ixx  Exception-RuntimeError.ixx  Exception.ixx
Engine/Source/Core/Hash/: Visera-Core-Hash-CityHash.ixx  Visera-Core-Hash.ixx
Engine/Source/Core/Hash/CityHash/: Visera-Core-Hash-CityHash.ixx
Engine/Source/Core/IO/: IO.ixx  Visera-Core-IO.ixx
Engine/Source/Core/IO/File/: File-Binary.ixx  File-Interface.ixx  File.ixx  Visera-Core-IO-File-BinaryFile.ixx  Visera-Core-IO-File.ixx
Engine/Source/Core/IO/Private/: IO-BinaryFile.ixx  IO-File.ixx
Engine/Source/Core/Log/: Log-Logger.ixx  Log.ixx  Visera-Core-Log-AppLogger.ixx  Visera-Core-Log-SystemLogger.ixx  Visera-Core-Log.ixx
Engine/Source/Core/Log/Logger/: Logger-App.ixx  Logger-System.ixx  Logger.ixx
Engine/Source/Core/Math/: Math-Angle.ixx  Math-Matrix.ixx  Math-Operation.ixx  Math-Vector.ixx  Math.ixx  Visera-Core-Math-Angle.ixx  Visera-Core-Math-Matrix.ixx  Visera-Core-Math-Operation.ixx  Visera-Core-Math-Vector.ixx  Visera-Core-Math.ixx
Engine/Source/Core/Media/: Visera-Core-Media.ixx
Engine/Source/Core/OS/: Visera-Core-OS.ixx
Engine/Source/Core/Signal/: Signal-AppExitSignal.ixx  Signal-Common.ixx  Signal-RuntimeError.ixx  Signal.ixx  Visera-Core-Signal-AppStop.ixx  Visera-Core-Signal-AppStopSignal.ixx  Visera-Core-Signal-EngineStop.ixx  Visera-Core-Signal-EngineStopSignal.ixx  Visera-Core-Signal-IOFailure.ixx  Visera-Core-Signal-Interface.ixx  Visera-Core-Signal-RuntimeError.ixx  Visera-Core-Signal.ixx
Engine/Source/Core/System/: Visera-Core-System.ixx
Engine/Source/Core/Time/: Time.ixx  Visera-Core-Time-Clock.ixx  Visera-Core-Time-Duration.ixx  Visera-Core-Time-TimePoint.ixx  Visera-Core-Time-TimeZone.ixx  Visera-Core-Time.ixx
Engine/Source/Core/Type/: Visera-Core-Type-Char.ixx  Visera-Core-Type-JSON.ixx  Visera-Core-Type-Loop.ixx  Visera-Core-Type-Name.ixx  Visera-Core-Type-Path.ixx  Visera-Core-Type-Text.ixx  Visera-Core-Type.ixx
Engine/Source/Editor/: Visera-Editor.ixx
Engine/Source/Editor/UI/: Visera-Editor-UI-ImGui.ixx  Visera-Editor-UI-RenderPass.ixx  Visera-Editor-UI.ixx  Visera-Runtime-UI-ImGui.ixx  Visera-Runtime-UI.ixx
Engine/Source/Editor/Widget/: Visera-Editor-Widget-Canvas.ixx  Visera-Editor-Widget-Interface.ixx  Visera-Editor-Widget.ixx
Engine/Source/Internal/: Internal.ixx  Visera-Internal.ixx
Engine/Source/Internal/Memory/: Memory-Registry.ixx  Memory.ixx  Visera-Internal-Memory-NamePool.ixx  Visera-Internal-Memory.ixx
Engine/Source/Internal/NamePool/: Visera-Internal-NamePool-Common.ixx  Visera-Internal-NamePool-NameDictionary.ixx  Visera-Internal-NamePool-NameEntry.ixx  Visera-Internal-NamePool-NameEntryTable.ixx  Visera-Internal-NamePool-NameSlot.ixx  Visera-Internal-NamePool-NameTokenTable.ixx  Visera-Internal-NamePool.ixx
Engine/Source/Internal/Patterns/: Pattern-Singleton.ixx  Pattern.ixx
Engine/Source/Platform/: Platform.ixx
Engine/Source/Platform/Window/: Window.ixx
Engine/Source/Render/: Render.ixx
Engine/Source/Render/Coordinate/: Coordinate-Axis.ixx  Coordinate-World.ixx  Coordinate.ixx
Engine/Source/Render/RHI/: RHI.ixx
Engine/Source/Render/UI/: UI.ixx
Engine/Source/Runtime/: Coordinate.txt  Runtime-Context.ixx  Runtime.ixx  Visera-RT.ixx  Visera-Runtime.ixx
Engine/Source/Runtime/Context/: Context.ixx
Engine/Source/Runtime/Global/: Visera-RT-Global.ixx
Engine/Source/Runtime/IO/: Visera-Runtime-Window-IO-Common.ixx  Visera-Runtime-Window-IO-Keyboard.ixx  Visera-Runtime-Window-IO-Mouse.ixx  Visera-Runtime-Window-IO.ixx
Engine/Source/Runtime/Platform/: Platform.ixx  Visera-Runtime-Platform-Window.ixx  Visera-Runtime-Platform.ixx
Engine/Source/Runtime/RHI/: Visera-Runtime-RHI.ixx
Engine/Source/Runtime/RTC/: Visera-Runtime-RTC.ixx
Engine/Source/Runtime/Render/: Render.ixx  Visera-RT-Render.ixx  Visera-Runtime-Render.ixx
Engine/Source/Runtime/UI/: Visera-Runtime-UI.ixx
Engine/Source/Runtime/Window/: Visera-Runtime-Window.ixx
Engine/Source/Runtime/World/: Visera-RT-World.ixx  Visera-Runtime-World-Object.ixx  Visera-Runtime-World.ixx
Engine/Source/Template/: Visear-Template.ixx
Engine/Source/Template/ComputePass/: Visera-Template-ComputePass.ixx
Engine/Source/Template/Pattern/: Visera-Template-Pattern-Prototype.ixx  Visera-Template-Pattern.ixx
Engine/Source/Template/RenderPass/: Visera-Template-RenderPass-Postprocessing.ixx  Visera-Template-RenderPass.ixx
Engine/Templates/Pattern/: Visera-Template-Pattern-Prototype.ixx  Visera-Template-Pattern.ixx
(+368 files in other folders)
