cmake_minimum_required(VERSION 3.21.0 FATAL_ERROR)

set(VISERA_ENGINE_DIR           "${CMAKE_CURRENT_SOURCE_DIR}")
set(VISERA_ENGINE_ASSETS_DIR    "${VISERA_ENGINE_DIR}/Assets")
set(VISERA_ENGINE_GLOBAL_DIR    "${VISERA_ENGINE_DIR}/Global")
set(VISERA_ENGINE_INTERFACE_DIR "${VISERA_ENGINE_DIR}/Interfaces")
set(VISERA_ENGINE_PACKAGE_DIR   "${VISERA_ENGINE_DIR}/Packages")
set(VISERA_ENGINE_SCRIPTS_DIR   "${VISERA_ENGINE_DIR}/Scripts")
set(VISERA_ENGINE_SOURCE_DIR    "${VISERA_ENGINE_DIR}/Source")

list(APPEND CMAKE_MODULE_PATH   "${VISERA_ENGINE_SCRIPTS_DIR}")

#[Engine]
file(GLOB_RECURSE VISERA_ENGINE_MODULES     "${VISERA_ENGINE_SOURCE_DIR}/*.ixx")
file(GLOB_RECURSE VISERA_ENGINE_INTERFACES  "${VISERA_ENGINE_INTERFACE_DIR}/*.ixx")
add_library(${VISERA}
            ${VISERA_ENGINE_MODULES}
            ${VISERA_ENGINE_INTERFACES})

target_sources(${VISERA}
                PRIVATE
                "${VISERA_ENGINE_GLOBAL_DIR}/ViseraEngine"
                "TODO.md")

target_include_directories(${VISERA} PUBLIC ${VISERA_ENGINE_GLOBAL_DIR})

source_group(TREE ${VISERA_ENGINE_DIR}
    FILES
    ${VISERA_ENGINE_MODULES}
    ${VISERA_ENGINE_INTERFACES})

#[External Libraries]
add_subdirectory("${VISERA_ENGINE_PACKAGE_DIR}")
target_link_libraries(${VISERA} PUBLIC VISERA_ENGINE_EXTERN)