cmake_minimum_required(VERSION 3.21.0 FATAL_ERROR)

set(VISERA_ENGINE_DIR           "${CMAKE_CURRENT_SOURCE_DIR}")
set(VISERA_ENGINE_ASSETS_DIR    "${VISERA_ENGINE_DIR}/Assets")
set(VISERA_ENGINE_GLOBAL_DIR    "${VISERA_ENGINE_DIR}/Global")
set(VISERA_ENGINE_PACKAGE_DIR   "${VISERA_ENGINE_DIR}/Packages")
set(VISERA_ENGINE_SCRIPTS_DIR   "${VISERA_ENGINE_DIR}/Scripts")
set(VISERA_ENGINE_SHADERS_DIR   "${VISERA_ENGINE_DIR}/Shaders")
set(VISERA_ENGINE_SOURCE_DIR    "${VISERA_ENGINE_DIR}/Source")

list(APPEND CMAKE_MODULE_PATH   "${VISERA_ENGINE_SCRIPTS_DIR}")

#[Engine]
file(GLOB_RECURSE VISERA_ENGINE_MODULES     "${VISERA_ENGINE_SOURCE_DIR}/*.h" "${VISERA_ENGINE_SOURCE_DIR}/*.ixx" "${VISERA_ENGINE_SOURCE_DIR}/*.cpp")
file(GLOB_RECURSE VISERA_ENGINE_GLOBALS     "${VISERA_ENGINE_GLOBAL_DIR}/*")
file(GLOB         VISERA_ENGINE_PACKAGES    "${VISERA_ENGINE_PACKAGE_DIR}/Manifest.json" "${VISERA_ENGINE_PACKAGE_DIR}/CMakeLists.txt")
file(GLOB_RECURSE VISERA_ENGINE_SHADERS     "${VISERA_ENGINE_SHADERS_DIR}/*.slang")

#[TODO]: Add a complile definition function in Package module.
add_compile_definitions(IMGUI_IMPL_VULKAN_USE_VOLK)
add_compile_definitions(IMGUI_IMPL_VULKAN_NO_PROTOTYPES)
add_compile_definitions(VISERA_ENGINE_ASSETS_DIR=\"${VISERA_ENGINE_ASSETS_DIR}\")
add_compile_definitions(VISERA_ENGINE_SHADERS_DIR=\"${VISERA_ENGINE_SHADERS_DIR}\")

add_library(${VISERA}
            ${VISERA_ENGINE_MODULES})

target_sources(${VISERA}
                PRIVATE
                ${VISERA_ENGINE_GLOBALS}
                ${VISERA_ENGINE_PACKAGES}
                ${VISERA_ENGINE_SHADERS}
                "TODO.md")

target_include_directories(${VISERA} PUBLIC ${VISERA_ENGINE_GLOBAL_DIR})

source_group(TREE ${VISERA_ENGINE_DIR}
    FILES
    ${VISERA_ENGINE_GLOBALS}
    ${VISERA_ENGINE_MODULES}
    ${VISERA_ENGINE_PACKAGES}
    ${VISERA_ENGINE_SHADERS})

#[External Libraries]
add_subdirectory("${VISERA_ENGINE_PACKAGE_DIR}")
target_link_libraries(${VISERA} PUBLIC VISERA_ENGINE_EXTERN)
#[Project]
set_target_properties(${VISERA} PROPERTIES FOLDER "Visera/Engine")